--- a/GoogleAuthApp/Content/ChatStyle.css
+++ b/GoogleAuthApp/Content/ChatStyle.css
@@ -10,9 +10,12 @@
 	color: #1e4638;
 	font-size: 24px;
 }
+.header_button{
+	border: none;
+}
 
 .submitButton {
-	background-color: #d7e5e4;
+	background-color: #22d1e2;
 	border: #5f9482 solid 1px;
 	padding: 4px;
 	cursor: pointer;
@@ -51,9 +54,10 @@
 	.chatRoom .title {
 		font-size: 16px;
 		font-weight: bold;
-		padding: 8px;
-		background-color: #d7e5e4;
-		border-bottom: solid 1px #5f9482;
+		padding: 8px; 
+		/*background-color: #d7e5e4;*/
+		background-color: #615dfa;
+		border-bottom: solid 2px #5f9482;
 	}
 
 	.chatRoom .content {
