--- a/GoogleAuthApp/Views/Profile/Offers.cshtml
+++ b/GoogleAuthApp/Views/Profile/Offers.cshtml
@@ -21,59 +21,59 @@
 <h2>Offers</h2>
 <div class="main-container">
 
-    <div>
-        <a class="button" href="@Url.Action("CreateOffer", "Profile")">
+    <div class="profile-container">
+        <a class="button purpule" href="@Url.Action("CreateOffer", "Profile")">
             Create Offer
         </a>
     </div>
     <div>
-        @foreach (var offer in Model.Offers.OrderByDescending(p => p.Date))
+        @foreach (var offer in Model.Offers)
         {
             <hr>
             <div class="postoffername">
                 <span>@offer.PostOrOffer</span>
             </div>
-                <div class="middle-sub-container">
-                    <div class="postoffer-top-container">
-                        <div class="details-container">
-                            <p>Details:</p>
-                            <textarea readonly>@offer.Text</textarea>
+            <div class="low-sub-container">
+                <div class="postoffer-top-container">
+                    <textarea readonly class="details-container">@offer.Text</textarea>
+                </div>
+                <div class="slider">
+                    @foreach (var picture in offer.OfferPictures)
+                    {
+                        <div class="slider__item">
+                            @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                                   + Convert.ToBase64String(picture.Picture) + "\" />")
                         </div>
-                        <div class="date-container">
-                            <p>Date:</p>
-                            @offer.Date
-                        </div>
-                        <div class="postoffer-categories-container">
-                            <p>Categories:</p>
+                    }
+                </div>   
+                <div class="postoffer-low-container">
+                    <div>
+                        <hr class="hr-offerProfile">
+                        <div class="categories-container">
                             @foreach (var category in offer.Categories)
                             {
-                                <p>@category.Group</p>
+                                <p class="category-circule">@category.Group</p>
                             }
                         </div>
+                        <hr class="hr-offerProfile">
                     </div>
-
-                    <div class="slider">
-                        @foreach (var picture in offer.OfferPictures)
-                        {
-                            <div class="slider__item">
-                                @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                                       + Convert.ToBase64String(picture.Picture) + "\" />")
-                            </div>
-                        }
-                    </div>
-                    <div class="postoffer-low-container">
+                    <div class="postoffer-low-container-bottom-section">
                         <div>
+                            @offer.Date
+                        </div>
+                        <div class="like-conteiner">
                             <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =offer.Id , backTo = "Offers"} )">
                                 <span>Like:</span>
                             </a>
                             @offer.Likes
                         </div>
                         <div>
-                            <a href="@Url.Action("ShowProfile", "Profile", new { userId = offer.UserId} )">
+                            <a  href="@Url.Action("ShowProfile", "Profile", new { userId = offer.UserId} )">
                                 <span>@offer.UserName's profile</span>
                             </a>
                         </div>
                     </div>
+                </div>
             </div>
         }
     </div>
